--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ember-resolver": "^2.0.3",
     "ember-source": "^2.12.0-beta.1",
     "ember-welcome-page": "^2.0.2",
-    "feathers-client": "^1.9.0",
+    "feathers-client": "^2.0.0-pre.1",
     "loader.js": "^4.1.0"
   },
   "engines": {
