--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^5.1.7"
+    "ember-cli-babel": "^5.1.7",
+    "feathers-client": "^2.0.0-pre.1"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -46,7 +47,6 @@
     "ember-resolver": "^2.0.3",
     "ember-source": "^2.12.0-beta.1",
     "ember-welcome-page": "^2.0.2",
-    "feathers-client": "^2.0.0-pre.1",
     "loader.js": "^4.1.0"
   },
   "engines": {
