--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "ember-cli-babel": "^5.1.7",
-    "feathers-client": "^2.0.0-pre.1"
+    "feathers-client": "2.0.0-pre.2"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -47,6 +47,7 @@
     "ember-resolver": "^2.0.3",
     "ember-source": "^2.12.0-beta.1",
     "ember-welcome-page": "^2.0.2",
+    "eslint": "^3.17.1",
     "loader.js": "^4.1.0"
   },
   "engines": {
