--- a/package.json
+++ b/package.json
@@ -29,26 +29,26 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
-    "ember-cli": "2.12.0-beta.1",
+    "ember-cli": "2.12.0",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.2",
     "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.3",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^3.1.0",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.12.0-beta.1",
+    "ember-data": "^2.12.1",
     "ember-debug-logger": "^0.3.1",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
-    "ember-source": "^2.12.0-beta.1",
+    "ember-source": "~2.12.0",
     "ember-welcome-page": "^2.0.2",
     "eslint": "^3.17.1",
-    "loader.js": "^4.1.0"
+    "loader.js": "^4.2.3"
   },
   "engines": {
     "node": ">= 4"
